--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "lodash": "^4.17.10",
     "nodemailer": "^4.6.5",
     "plotly.js": "^1.38.3",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "rxjs": "^5.5.2",
     "url-loader": "^0.6.2",
     "zone.js": "^0.8.18"
