--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clarity-icons": "^0.10.15",
     "clarity-ui": "^0.10.15",
     "core-js": "^2.5.1",
+    "d3": "^5.9.2",
     "firebase": "^4.6.2",
     "firebase-admin": "^5.12.1",
     "firebase-functions": "^2.0.5",
@@ -40,6 +41,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.10",
     "nodemailer": "^4.6.5",
+    "plotly": "^1.0.6",
     "plotly.js": "^1.38.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
